# meetai

./: .env.example  .gitmodules  .lintstagedrc.json  .prettierrc  Makefile  docker-compose.yml  docker-compose_agent.yml  docker-compose_inngest.yaml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
Docs/: setup.md
src/: constants.ts  instrumentation.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/(dashboard)/agents/: page.tsx
src/app/(dashboard)/meetings/: page.tsx
src/app/(dashboard)/upgrade/: page.tsx
src/app/api/inngest/: route.ts
src/app/api/webhook/: route.ts
src/app/call/[meetingId]/: page.tsx
src/components/: data-pagination.tsx  data-table.tsx  empty-state.tsx  error-state.tsx  generated-avatar.tsx  loading-state.tsx  responsive-dialog.tsx  visual-3d-placeholder.tsx
src/components/ui/: badge.tsx  calendar.tsx  command.tsx  context-menu.tsx  form.tsx  input-group.tsx  pagination.tsx  sidebar.tsx  toggle-group.tsx
src/components/visual-3d/: analyser.ts  backdrop-shader.ts  sphere-shader.ts  visual-3d-canvas.tsx
src/db/: schema.ts
src/inngest/: client.ts  functions.ts
src/lib/: auth-client.ts  auth.ts  avatar.tsx  stream-chat.ts  stream-video.ts
src/modules/agents/: params.ts  schema.ts  types.ts
src/modules/agents/hooks/: use-agents-filters.tsx  (+1 more)
src/modules/meetings/: params.ts  schema.ts  types.ts
src/trpc/: client.tsx  init.ts
src/trpc/routers/: _app.ts
vision-agent-service/: Dockerfile  golf_coach.md  main.py  pyproject.toml
vision-agent-service/agents-core/: README.md  pyproject.toml
vision-agent-service/agents-core/vision_agents/: PROTOBUF_GENERATION.md
vision-agent-service/agents-core/vision_agents/core/agents/: agent_launcher.py
vision-agent-service/agents-core/vision_agents/core/turn_detection/: README.md
vision-agent-service/plugins/gemini/tests/: test_realtime_function_calling.py
(+54 files in other folders)
