[project]
name = "vision-agents-service"
version = "0.0.0"
requires-python = ">=3.12"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "vision-agents",
  "vision-agents-plugins-openai",
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-ultralytics",
  "vision-agents-plugins-gemini",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "httpx[socks]>=0.25.0",
]

# Defined members = ["agents-core", "plugins/*"] so uv knows where to look for local packages.
[tool.uv.workspace]
members = ["agents-core", "plugins/*"]

# [tool.uv.workspace] Since we are now using a proper workspace, we don't need to manually map the paths for vision-agents and the plugins; uv will find them automatically.
# [tool.uv.sources]
# "vision-agents" = {path = "./agents-core", editable=true}
# "vision-agents-plugins-ultralytics" = {path = "./plugins/ultralytics", editable=true}
# "vision-agents-plugins-getstream" = {path = "./plugins/getstream", editable=true}
# "vision-agents-plugins-gemini" = {path = "./plugins/gemini", editable=true}
